# upy

./: .gitignore  CHANGELOG  LICENSE  README.rst  __init__.py  averaging.py  bento.info  characteristic.py  core.py  decimal2.py  dependency.py  id_generator.py  linear_regression.py  operators.py  printable.py  pyproject.toml  setup.py  setup_.py  test.py  umath.py
.averaging/02_0.1.0b_10-02-02/: averaging.py
.averaging/03_0.1.1b_10-02-11/: averaging.py
.characteristic/: CHANGELOG
.characteristic/02_0.2.0b_10-02-16/: characteristic.py
.characteristic/04_0.2.2b_10-02-19/: characteristic.py
.core/: CHANGELOG
.core/01_0.1.0b_10-01-30/: core.py
.core/02_0.2.0b_10-01-31/: core.py
.core/04_0.2.2b_10-02-03/: core.py
.core/05_0.2.2b_10-02-04/: core.py
.core/07_0.2.4b_10-02-11/: core.py
.core/12_0.3.3b_10-02-18/: core.py
.core/13_0.3.4b_10-02-19/: core.py
.dependency/: CHANGELOG
.operators/: CHANGELOG
.printable/: CHANGELOG
.test/: CHANGELOG
.umath/: CHANGELOG
__init__/: CHANGELOG
averaging/: CHANGELOG
characteristic/: CHANGELOG
core/: CHANGELOG
decimal/: CHANGELOG
dependency/: CHANGELOG
id_generator/: CHANGELOG
linear_regression/: CHANGELOG
operators/: CHANGELOG
pending/: linear_regression.py
printable/: CHANGELOG
test/: CHANGELOG  test.py  test_v0_m5.py
umath/: CHANGELOG
upy/: adjstr.py  averaging.py  characteristic.py  core.py  decimal2.py  dependency.py  id_generator.py  operators.py  printable.py  test.py  umath.py
upy2/: __init__.py  characteristic.py  context.py  core.py  dependency.py  id_generator.py  numpy_operators.py  numpy_patch.py  operators.py  printable.py  sessions.py  uufuncs.py
(+182 files in other folders)
